Added poisoned dagger and some minor refactors

--- a/src/main/resources/assets/cuboiddungeon/lang/en_us.json
+++ b/src/main/resources/assets/cuboiddungeon/lang/en_us.json
@@ -2,6 +2,8 @@
   "item.cuboiddungeon.food_ration": "Ration of food",
   "item.cuboiddungeon.pasty": "Pasty",
   "item.cuboiddungeon.dagger": "Dagger",
+  "item.cuboiddungeon.poisoned_dagger": "Poisoned Dagger",
+
   "item.cuboiddungeon.raw_rat_meat": "Raw rat meat",
   "item.cuboiddungeon.cooked_rat_meat": "Cooked rat meat",
   "item.cuboiddungeon.breezefruit": "Breezefruit",
