Added loot tables to blocks

--- a/src/main/resources/assets/cuboiddungeon/lang/en_us.json
+++ b/src/main/resources/assets/cuboiddungeon/lang/en_us.json
@@ -10,6 +10,9 @@
   "item.cuboiddungeon.breezefruit_roll": "Breezefruit roll",
   "item.cuboiddungeon.breezefruit_pie": "Breezefruit pie",
   "item.cuboiddungeon.breezefruit_tea": "Breezefruit Tea",
+  "item.cuboiddungeon.blood_goblet_empty": "Empty Blood goblet",
+  "item.cuboiddungeon.blood_goblet_full": "Full Blood goblet",
+
 
   "block.cuboiddungeon.dungeon_brick_wall": "Dungeon brick wall",
   "block.cuboiddungeon.dungeon_brick_wall_mossy": "Mossy dungeon brick wall",
