--- a/src/main/resources/assets/cuboiddungeon/lang/en_us.json
+++ b/src/main/resources/assets/cuboiddungeon/lang/en_us.json
@@ -16,6 +16,7 @@
   "item.cuboiddungeon.scroll_of_waves": "Scroll of Waves",
   "item.cuboiddungeon.scroll_of_dispel": "Scroll of Dispel",
   "item.cuboiddungeon.ring_of_power": "Ring of Power",
+  "item.cuboiddungeon.bottle_of_souls": "Bottle of Souls",
 
   "block.cuboiddungeon.dungeon_brick_wall": "Dungeon brick wall",
   "block.cuboiddungeon.dungeon_brick_wall_mossy": "Mossy dungeon brick wall",
